api/Kube/project2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project2-deployment
  labels:
    app: project2-eval
spec:
  replicas: 3
  selector:
    matchLabels:
      app: project2-eval
  template:
    metadata:
      labels:
        app: project2-eval
    spec:
      containers:
      - name: eval-api
        image: rdallavalle/project2_api:latest
        ports:
        - containerPort: 8000
