api/Kube/project2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project2-service
  labels:
    app: project2-eval
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: project2-eval
